✨ subsription model user can subscribe to blog
